# Aiice

./: .gitignore  CONTRIBUTING.md  README.md  mkdocs.yml  pyproject.toml
.github/scripts/: anonymize.py
.github/workflows/: publish-anon.yml  publish-doc-anon.yml  publish-doc.yml  test.yml
docs/: leaderboard.md
docs/api/: aiice.md  index.md  loader.md  metrics.md  preprocess.md
docs/api/core/: huggingface.md
docs/assets/: leaderboard.css  leaderboard.csv  leaderboard.js
scripts/: README.md
scripts/experiments/: README.md  baseline_mean.py  baseline_repeat.py  cli.py  config.py  conv2d.py  conv3d.py  convert.py  convlstm.py  fno.py  unet.py
scripts/experiments/configs/: baseline_mean.yaml  baseline_repeat.yaml  conv2d.yaml  conv3d.yaml  fno_L1.yaml  fno_L2.yaml  fno_L3.yaml  fno_L4.yaml  fno_S1.yaml  fno_S2.yaml  fno_S3.yaml  unet.yaml
scripts/osi-saf/: data_preparation.py
site/: 404.html  hooks.py  index.html  objects.inv  sitemap.xml
site/api/: index.html
site/api/aiice/: index.html
site/api/core/huggingface/: index.html
site/api/loader/: index.html
site/api/metrics/: index.html
site/api/preprocess/: index.html
site/assets/: leaderboard.csv  leaderboard.js
site/contributing/: index.html
site/leaderboard/: index.html
site/search/: search_index.json
src/aiice/: __init__.py  benchmark.py  constants.py  metrics.py  preprocess.py
tests/: test_benchmark.py
