[project]
name = "aiice-bench"
dynamic = ["version"]
description = "A standardized benchmark for spatio-temporal forecasting of Arctic sea ice concentration"
readme = "README.md"
authors = [
    { name = "kdduha", email = "just.andrew.kd@gmail.com" }
]
requires-python = ">=3.10"
dependencies = [
    "huggingface-hub>=1.3.1",
    "imageio>=2.37.3",
    "matplotlib>=3.10.8",
    "numpy>=2.2.6",
    "pydantic>=2.12.5",
    "pytorch-msssim>=1.0.0",
    "requests>=2.32.5",
    "torch>=2.9.1",
    "torchcnnbuilder>=0.1.5",
]

[build-system]
requires = ["hatchling", "uv-dynamic-versioning"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pdoc>=16.0.0",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "mkdocstrings[python]>=0.29",
    "mkdocs-autorefs>=1.2",
    "mkdocs-material>=9.7.6",
]
scripts = [
    "pandas>=2.3.3",
    "torchcnnbuilder>=0.1.5",
]

[tool.hatch.version]
source = "uv-dynamic-versioning"

[tool.uv-dynamic-versioning]
fallback-version = "0.0.0"

[tool.hatch.build.targets.wheel]
packages = ["src/aiice"]

[tool.isort]
profile = "black"

[tool.black]
target-version = ["py311"]
